fix navbar covering section headings

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,9 @@ body {
 	/* Bootstrap Navbar Padding */
 	padding-top: 70px;
 }
+.content {
+	padding-top: 50px;
+}
 
 .jumbotron h1 {
 	text-align: center;
